# randolf

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: release.yml
assets/: icon.aseprite  indicators.aseprite  randolf.aseprite
src/: README.md  application_launcher.rs  command.rs  configuration_manager.rs  configuration_provider.rs  horizontal_layout.rs  hotkey_manager.rs  log_manager.rs  main.rs  native_api.rs  point.rs  rect.rs  sizing.rs  tray_menu_manager.rs  utils.rs  window.rs  window_drag_manager.rs  window_manager.rs  workspace_guard.rs  workspace_manager.rs
src/api/: mock_api.rs  mock_windows_api.rs  mod.rs  native_api.rs  real_windows_api.rs  real_windows_api_for_dragging.rs  window_drag_manager.rs  windows_api.rs
src/common/: command.rs  direction.rs  drag_state.rs  mod.rs  monitor.rs  monitor_handle.rs  monitor_info.rs  monitors.rs  persistent_workspace_id.rs  placement.rs  point.rs  rect.rs  resize_mode.rs  resize_state.rs  scrolling_strips.rs  sizing.rs  transient_workspace_id.rs  width_preset.rs  window.rs  window_handle.rs  window_placement.rs  workspace.rs  workspace_action.rs
src/common/tests/: mod.rs  placement_tests.rs  scrolling_strips_tests.rs  sizing_tests.rs  workspace_tests.rs
src/files/: file_manager.rs  file_type.rs  mod.rs  workspaces_file.rs
src/utils/: command.rs  constants.rs  debugger_utils.rs  desktop.rs  direction.rs  mod.rs  monitor.rs  monitor_handle.rs  monitor_info.rs  monitors.rs  permanent_workspace_id.rs  persistent_workspace_id.rs  point.rs  rect.rs  sizing.rs  string_utils.rs  test_utils.rs  transient_workspace_id.rs  utils.rs  window.rs  window_handle.rs  window_placement.rs  workspace.rs  workspace_id.rs
src/window_manager/: horizontal_layout.rs  mod.rs  navigation.rs  placement.rs  scrolling.rs  scrolling_layout.rs  scrolling_strips.rs  spatial.rs  spatial_layout.rs  window_manager.rs
src/window_manager/tests/: mod.rs  navigation_tests.rs  placement_tests.rs  scrolling_layout_tests.rs  scrolling_strips_tests.rs  scrolling_tests.rs  spatial_layout_tests.rs  spatial_tests.rs  test_support.rs  window_manager_tests.rs
