[package]
name = "randolf"
description = "A window manager for Windows 11"
version = "0.5.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_System", "Win32_System_Com"] }
win-hotkeys = "0.5"
log = "0.4.27"
trayicon = "0.2.0"
simplelog = "0.12.2"
crossbeam-channel = "0.5.14"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "randolf"
path = "src/main.rs"