[package]
name = "randolf"
description = "A window management utility for Windows 11"
repository = "https://github.com/kimgoetzke/randolf"
version = "0.16.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_System", "Win32_System_Com", "Win32_UI_HiDpi", "Win32_System_LibraryLoader"] }
win-hotkeys = "0.5.1"
log = "0.4.27"
trayicon = "0.2.0"
simplelog = "0.12.2"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.20.0"
testing_logger = "0.1.1"
serial_test = "3.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "randolf"
path = "src/main.rs"
