[package]
name = "randolf"
description = "A window management utility for Windows 11"
repository = "https://github.com/kimgoetzke/randolf"
version = "0.24.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_System", "Win32_System_Com", "Win32_UI_HiDpi", "Win32_System_LibraryLoader", "Win32_Graphics_Dwm"] }
win-hotkeys = "0.5.1"
log = "0.4.29"
trayicon = "0.4.0"
simplelog = "0.12.2"
time = "0.3.47" # Pin this transitive dependency to deal with CVE-2026-25727
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.24.0"
testing_logger = "0.1.1"
serial_test = "3.3.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "randolf"
path = "src/main.rs"
